# notaryos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: integration-tests.yml
config/: enterprise_thresholds.yaml
docs/: BROCHURE.md  INDEPENDENT_VERIFICATION.md  QUICKSTART.md  SDK_EXAMPLES.md  TECHNICAL_MANUAL.md  USER_MANUAL.md  openapi.yaml
examples/: audit_trail.py  basic_verify.py  chain_verification.py  demo_25_receipts.py  notary_receipt.json  third_party_audit.py
examples/autogen-group/: README.md  main.py  requirements.txt
examples/crewai-team/: README.md  main.py  requirements.txt
examples/langchain-agent/: README.md  main.py  requirements.txt
examples/openai-agents/: README.md  main.py  requirements.txt
examples/pydantic-ai-agent/: README.md  main.py  requirements.txt
examples/vercel-ai-sdk/: README.md  index.ts  package.json  test.ts
sdk/: README.md
sdk/go/: README.md  go.mod
sdk/go/notary/: client.go  counterfactual.go  offline.go  wrap.go
sdk/python/: README.md  notary_offline.py  notary_sdk.py  pyproject.toml
sdk/python/ats_notary/: __init__.py
sdk/python/examples/: test_100_receipts.py  test_e2e_full.py  tradebot_alpha.py
sdk/python/integrations/: __init__.py  anthropic_claude.py  aws_bedrock.py  crewai.py  google_adk.py  langchain.py  llamaindex.py  openai_agents.py  pydantic_ai.py  smolagents.py
sdk/python/notaryos/: __init__.py
sdk/python/notaryos/integrations/: __init__.py  anthropic_claude.py  aws_bedrock.py  crewai.py  google_adk.py  langchain.py  llamaindex.py  openai_agents.py  pydantic_ai.py  smolagents.py
sdk/typescript/: README.md  notary-sdk.ts  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  offline.ts
sdk/typescript/src/integrations/: langchain.ts  openai-agents.ts  vercel-ai.ts
tests/: conftest.py  test_sdk_baseline.py
tests/frameworks/: test_autogen.py  test_concurrency.py  test_counterfactual_crewai.py  test_crewai.py  test_langchain.py  test_openai_agents.py  test_pydantic_ai.py
ui/: .env.example  .gitignore  Dockerfile  README.md  RECEIPT_SPEC.md  SECURITY.md  SECURITY_ARCHITECTURE.md  middleware.ts  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
ui/docs/images/: README.md
ui/public/: index.html  site.webmanifest
ui/src/: App.tsx
ui/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts  template.tsx
ui/src/app/(auth)/: layout.tsx
ui/src/app/(dashboard)/: layout.tsx
ui/src/app/(home)/: layout.tsx  page.tsx
ui/src/app/about/: layout.tsx  page.tsx
ui/src/app/api-docs/: layout.tsx  page.tsx
ui/src/app/docs/: layout.tsx  page.tsx
ui/src/app/explore/: layout.tsx  page.tsx
ui/src/app/forge/: layout.tsx  page.tsx
ui/src/app/live/: layout.tsx  page.tsx
ui/src/app/osint/: layout.tsx  page.tsx
ui/src/app/panopticon/: layout.tsx  page.tsx
ui/src/app/panopticon-v2/: layout.tsx  page.tsx
ui/src/app/pricing/: layout.tsx  page.tsx
ui/src/app/privacy/: layout.tsx  page.tsx
ui/src/app/tamper/: layout.tsx  page.tsx
ui/src/app/terms/: layout.tsx  page.tsx
ui/src/app/trust/: layout.tsx  page.tsx
ui/src/app/tutor/: layout.tsx  page.tsx
ui/src/app/verify/: layout.tsx  page.tsx
ui/src/components/about/: AboutPage.tsx
ui/src/components/account/: ProfilePage.tsx  SettingsPage.tsx  UserMenu.tsx
ui/src/config/: api.ts
ui/src/contexts/: AuthContext.tsx
ui/src/hooks/: useAuth.ts  useNotary.ts  useTutorWorkspace.ts
ui/src/lib/: api-client.ts  auth-context.tsx  clerk-token-provider.tsx  clerk-user-sync.tsx
ui/src/styles/: globals.css  theme.ts
ui/src/types/: demo.ts  index.ts
(+112 files in other folders)
