[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notaryos"
version = "2.1.0"
description = "NotaryOS SDK - Cryptographic receipts for AI agent actions. Issue, verify, and audit with Ed25519 signatures."
readme = "README.md"
requires-python = ">=3.8"
license = "BUSL-1.1"
authors = [
    {name = "Agent Town Square", email = "hello@notaryos.org"},
]
keywords = [
    "notary", "cryptographic", "receipt", "verification",
    "ai", "agent", "ed25519", "audit", "accountability", "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Zero external dependencies - uses only stdlib urllib + hashlib
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.2", "pytest-cov", "mypy"]
langchain = ["langchain>=0.3", "langchain-core>=0.3", "langchain-community>=0.3"]
crewai = ["crewai>=0.80"]
openai-agents = ["openai-agents>=0.0.7"]
pydantic-ai = ["pydantic-ai>=0.0.30"]
autogen = ["autogen-agentchat>=0.4"]
all-frameworks = [
    "notaryos[langchain,crewai,openai-agents,pydantic-ai,autogen,dev]",
]

[project.urls]
Homepage = "https://notaryos.org"
Documentation = "https://notaryos.org/docs"
Repository = "https://github.com/hellothere012/notaryos"
Issues = "https://github.com/hellothere012/notaryos/issues"

[project.scripts]
notaryos = "notary_sdk:main"

[tool.setuptools]
py-modules = ["notary_sdk"]
packages = ["notaryos", "notaryos.integrations"]
